# quant-investment-analysis

./: .gitignore  GPT_PRO_HANDOFF.md  README.md  pyproject.toml
config/: phase1.yaml  phase1_exhaustive.yaml  phase2_free_real_data.yaml  phase2_real_data.yaml  phase3_beta_residual_reversal_search.yaml  phase3_cffex_crowding_grid.yaml  phase3_cffex_data.yaml  phase3_cffex_settlement_params.yaml  phase3_cffex_trade_parameters.yaml  phase3_concentration_search.yaml  phase3_derivative_overlay_grid.yaml  phase3_derivative_timing_grid.yaml  phase3_etf_data.yaml  phase3_etf_screen.yaml  phase3_etf_strict_new_families.yaml  phase3_gap_intraday_search.yaml  phase3_holdout_registry.yaml  phase3_idiosyncratic_strength_search.yaml  phase3_momentum_acceleration_search.yaml  phase3_post_limit_release_search.yaml  phase3_risk_weighting_search.yaml  phase3_search.yaml  phase3_search_registry.yaml  phase3_signed_flow_search.yaml  phase3_state_selector_search.yaml  phase3_stateful_search.yaml
docs/: codex_phase2_real_data_task.md  experiment_proof_plan.md  phase2_stock_derivatives_plan.md
reports/: cloud_candidate_registry.csv  cloud_cffex_crowding_status.md  cloud_cffex_next_batch_audit.md  cloud_checkpoint_audit_2c9dd25.md  cloud_elimination_ledger.md  cloud_etf_strict_lineage_audit.md  cloud_lineage_forensics.md  cloud_progress.md  cloud_small_capital_feasibility.md  cloud_stage_status.md  cloud_u3_ih_margin_forensics.md  current_repo_healthcheck.md  phase1_exhaustive_experiment_report.md  phase1_experiment_report.md  phase2_real_data_status.md
scripts/: build_phase2_realdata.py  (+62 more)
(+735 files in other folders)
