[project]
name = "quant-proof"
version = "0.1.0"
description = "Phase-1 executable proof for A-share quantitative strategy target constraints."
requires-python = ">=3.9"
dependencies = [
  "akshare>=1.17.0",
  "baostock>=0.8.9",
  "duckdb>=1.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pyyaml>=6.0.0",
  "tenacity>=8.2.0",
  "tqdm>=4.66.0",
  "tushare>=1.4.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
